# probstats-project

./: .copier-answers.yml  CONTRIBUTING.md  README.md  duties.py  mkdocs.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: 1-bug.md  config.yml
config/: ruff.toml
docs/.overrides/partials/: comments.html
scripts/: gen_credits.py
src/probstats_project/: __init__.py  __main__.py  cli.py  debug.py
tests/: __init__.py  test_cli.py
